# clang_project_uni

./: .directory  .gitignore  CMakeLists.txt  README.md  functions.c  functions.h  functionsPhase2.c  functionsPhase2.h  main.c  mergeSortLinkedList.c  mergeSortLinkedList.h  stringsort.c  stringsort.h
data/: bagOfWords.txt
